[gd_scene load_steps=14 format=3 uid="uid://c1atiatmntqtd"]

[ext_resource type="Script" path="res://Scripts/Enemies/enemie_turret.gd" id="1_cjmwu"]
[ext_resource type="Texture2D" uid="uid://phkym6w612vf" path="res://Assets/Enemies/gamion_turret.png" id="2_e1aof"]
[ext_resource type="Texture2D" uid="uid://bwsaw3a3606ec" path="res://Assets/Enemies/Line.png" id="3_5ahhc"]
[ext_resource type="AudioStream" uid="uid://djnhmy6dxw4bm" path="res://Assets/Audio/SFX/Bib_First.mp3" id="3_u11ou"]
[ext_resource type="Material" uid="uid://d2mt3xis20ka2" path="res://Materials/palette_grid_levels.tres" id="4_617dm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ht7we"]
size = Vector2(14, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_n43fe"]
atlas = ExtResource("2_e1aof")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ga6lx"]
atlas = ExtResource("2_e1aof")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_secmy"]
atlas = ExtResource("2_e1aof")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_70do0"]
atlas = ExtResource("2_e1aof")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_luk3u"]
atlas = ExtResource("2_e1aof")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ou7jq"]
atlas = ExtResource("2_e1aof")
region = Rect2(32, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_hcfvm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n43fe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ga6lx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_secmy")
}],
"loop": true,
"name": &"gamion_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_70do0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_luk3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ou7jq")
}],
"loop": true,
"name": &"gamion_top",
"speed": 5.0
}]

[node name="Enemie_turret" type="Area2D"]
script = ExtResource("1_cjmwu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_ht7we")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hcfvm")
animation = &"gamion_top"
frame_progress = 0.875047

[node name="left_raycast" type="RayCast2D" parent="."]
visible = false
enabled = false
target_position = Vector2(-56, 0)
collision_mask = 2

[node name="raycast_image" type="Sprite2D" parent="left_raycast"]
position = Vector2(-28, 0)
rotation = 1.5708
texture = ExtResource("3_5ahhc")

[node name="right_raycast" type="RayCast2D" parent="."]
visible = false
enabled = false
target_position = Vector2(56, 0)
collision_mask = 2

[node name="raycast_image" type="Sprite2D" parent="right_raycast"]
position = Vector2(28, 0)
rotation = 1.5708
texture = ExtResource("3_5ahhc")

[node name="up_raycast" type="RayCast2D" parent="."]
visible = false
enabled = false
target_position = Vector2(0, -56)
collision_mask = 2

[node name="raycast_image" type="Sprite2D" parent="up_raycast"]
position = Vector2(0, -28)
texture = ExtResource("3_5ahhc")

[node name="down_raycast" type="RayCast2D" parent="."]
visible = false
enabled = false
target_position = Vector2(0, 56)
collision_mask = 2

[node name="raycast_image" type="Sprite2D" parent="down_raycast"]
material = ExtResource("4_617dm")
position = Vector2(0, 28)
texture = ExtResource("3_5ahhc")

[node name="seen_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_u11ou")
pitch_scale = 0.4

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
